--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
 }
 
 .wrapper {
-  background: linear-gradient(to right, #e67e22, #e74c3c);
+  background: linear-gradient(to right, #dd985b, #825317);
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -24,8 +24,8 @@ body {
 
 .title-container {
   height: 90vh;
-  background: url("img/bg.jpg") center center no-repeat;
-  background-size: cover;
+  background: url("img/bg.jpg");
+  background-size: 60%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,6 +35,8 @@ body {
 
 .title-container__title {
   font-size: 50px;
+  color: #f16051;
+  text-shadow: -1px 0 #44350e, 0 1px #44350e, 1px 0 #44350e, 0 -1px #44350e;
   letter-spacing: 2px;
   line-height: 1.3;
   font-family: 'Roboto Slab', serif;
@@ -42,6 +44,8 @@ body {
 
 .title-container__subtitle {
   font-style: italic;
+  color: #fff;
+  text-shadow: -1px 0 #44350e, 0 1px #44350e, 1px 0 #44350e, 0 -1px #44350e;
   font-weight: 100;
   letter-spacing: 1px;
   line-height: 1.5;
@@ -49,7 +53,7 @@ body {
 }
 
 .form-container {
-  background-color: #2c3e50;
+  background-color: #44350e;
   height: 90vh;
   padding-top: 100px;
   padding-left: 50px;
