--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,7 @@ input[type="text"] {
 }
 
 input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0 30px #2c3e50 inset;
+    -webkit-box-shadow: 0 0 0 30px #44350e inset;
     -webkit-text-fill-color: #fff !important;
 }
 
